europe in gcp repo name

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,8 +3,8 @@ steps:
   - name: 'gcr.io/cloud-builders/docker'
     args: [
       'build', 
-      '-t', 'eu-docker.pkg.dev/myposter-data-hub/mp-emarsys-si-api/api-push:latest', 
+      '-t', 'europe-docker.pkg.dev/myposter-data-hub/mp-emarsys-si-api/api-push:latest', 
       '.'
     ]
 images:
-  - 'eu-docker.pkg.dev/myposter-data-hub/mp-emarsys-si-api/api-push:latest'
+  - 'europe-docker.pkg.dev/myposter-data-hub/mp-emarsys-si-api/api-push:latest'
